5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4312/executions/1880_1735.log
== TEST (2019-07-03 15:07:09) 
-- CODE:
from numpy import*
mat = array(eval(input("Insira a matriz: ")))

for i in range(mat):
	for j in range(mat):
		v = mat[i,:]
		print(max(vet[i,j]))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 15:07:26) 
-- CODE:
from numpy import*
mat = array(eval(input("Insira a matriz: ")))

for i in range(size(mat)):
	for j in range(mat):
		v = mat[i,:]
		print(max(vet[i,j]))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 15:07:35) 
-- CODE:
from numpy import*
mat = array(eval(input("Insira a matriz: ")))

for i in range(size(mat)):
	for j in range(size(mat):
		v = mat[i,:]
		print(max(vet[i,j]))
-- ERROR:
File "XXXX", line 5
    for j in range(size(mat):
                            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 15:07:39) 
-- CODE:
from numpy import*
mat = array(eval(input("Insira a matriz: ")))

for i in range(size(mat)):
	for j in range(size(mat)):
		v = mat[i,:]
		print(max(vet[i,j]))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 15:08:00) 
-- CODE:
from numpy import*
mat = array(eval(input("Insira a matriz: ")))

for i in range(size(mat)):
	for j in range(size(mat)):
		v = mat[i,:]
		print(max(vet[i,j]))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 15:08:12) 
-- CODE:
from numpy import*
mat = array(eval(input("Insira a matriz: ")))

for i in range(size(mat)):
	for j in range(size(mat)):
		v = mat[i,:]
		print(max(mat[i,j]))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 15:09:05) 
-- CODE:
from numpy import*
mat = array(eval(input("Insira a matriz: ")))

for i in range(size(mat)):
	for j in range(size(mat)):
		print(max(mat[i,:]))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 15:22:21) 
-- CODE:
from numpy import*
mat = array(eval(input("Insira a matriz: ")))

for i in range(size(mat)):
	for j in range(size(mat)):
		v = mat[i,:]
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 15:22:32) 
-- CODE:
from numpy import*
mat = array(eval(input("Insira a matriz: ")))

for i in range(size(mat)):
	for j in range(size(mat)):
		v = mat[i,:]
		
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 15:23:46) 
-- CODE:
from numpy import*
mat = array(eval(input("Insira a matriz: ")))

for i in range(shape(mat)):
	for j in range(size(mat)):
		v = mat[i,:]
		
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 15:25:33) 
-- CODE:
from numpy import*
mat = array(eval(input("Insira a matriz: ")))

for i in range(shape(mat)):
		v = max(mat[i,j])
		
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 15:27:39) 
-- CODE:
from numpy import*
mat = array(eval(input("Insira a matriz: ")))

j = 0
for i in range(max(mat)):
		v = i
		j = j + 1
		
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 15:28:45) 
-- CODE:
from numpy import*
mat = array(eval(input("Insira a matriz: ")))

j = 0
for i in range(size(mat)):
	if mat[i] == max[mat]:
		v = i
		j = j + 1
		
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 15:29:09) 
-- CODE:
from numpy import*
mat = array(eval(input("Insira a matriz: ")))

j = 0
for i in range(size(mat)):
	if mat[i] == max(mat[i,j])
		v = i
		j = j + 1
		
print(v)
-- ERROR:
File "XXXX", line 6
    if mat[i] == max(mat[i,j])
                             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 15:30:31) 
-- CODE:
from numpy import*
mat = array(eval(input("Insira a matriz: ")))

z = 0
for i in range(size(mat)):
	for j in range(size(mat)):
		if mat[i,:] == max(mat[i,j]): 
			v = i
			j = j + 1
		
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 15:32:48) 
-- CODE:
from numpy import*
mat = array(eval(input("Insira a matriz: ")))

z = 0
for i in range(size(mat)):
	for j in range(size(mat)):
		if mat[i,:] == max(mat[i,j]): 
			v = i
			j = j + 1
		
print(v)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 15:33:19) 
-- CODE:
from numpy import*
mat = array(eval(input("Insira a matriz: ")))

z = 0
for i in range(size(mat)):
	for j in range(size(mat)):
		if mat[i,:] == max(mat[i,j]): 
			v = i
			j = j + 1
		
print(v)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 15:35:39) 
-- CODE:
from numpy import*
mat = array(eval(input("Insira a matriz: ")))

z = 0
for i in range(size(mat)):
	for j in range(size(mat)):
		if mat[i,j] == max(mat[i,j]): 
			v = j
		
print(v)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 15:36:27) 
-- CODE:
from numpy import*
mat = array(eval(input("Insira a matriz: ")))

z = 0
for i in range(shape(mat)[0]):
	for j in range(shape(mat)[1]):
		if mat[i,j] == max(mat[i,j]): 
			v = j
		
print(v)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 15:40:47) 
-- CODE:
from numpy import*
mat = array(eval(input("Insira a matriz: ")))

z = mat[0,0]
v = 0
for i in range(shape(mat)[0]):
	for j in range(shape(mat)[1]):
		if z < mat[i,j]: 
			v = i
			z = mat[i,j]
		
print(v)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-03 15:40:58) 
-- CODE:
from numpy import*
mat = array(eval(input("Insira a matriz: ")))

z = mat[0,0]
v = 0
for i in range(shape(mat)[0]):
	for j in range(shape(mat)[1]):
		if z < mat[i,j]: 
			v = i
			z = mat[i,j]
		
print(v)

-- EXECUTION TIME:
1.02864
-- TEST CASE 1:
---- input:
[[28,23,18],[14,27,11],[17,12,25]]
---- correct output:
0
---- user output:
0
-- TEST CASE 2:
---- input:
[[21,29,21],[26,24,23],[29,28,23],[22,28,22],[27,10,10],[29,24,20]]
---- correct output:
2
---- user output:
0
-- TEST CASE 3:
---- input:
[[10,22,14],[25,12,21],[23,22,18],[22,10,21],[20,10,15]]
---- correct output:
2
---- user output:
1
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 15:40:59) 
-- CODE:
from numpy import*
mat = array(eval(input("Insira a matriz: ")))

z = mat[0,0]
v = 0
for i in range(shape(mat)[0]):
	for j in range(shape(mat)[1]):
		if z < mat[i,j]: 
			v = i
			z = mat[i,j]
		
print(v)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-03 15:41:16) 
-- CODE:
from numpy import*
mat = array(eval(input("Insira a matriz: ")))

z = mat[0,0]
v = 0
for i in range(shape(mat)[0]):
	for j in range(shape(mat)[1]):
		if z < mat[i,j]: 
			v = i
			z = mat[i,j]
		
print(v)

-- EXECUTION TIME:
2.44267
-- TEST CASE 1:
---- input:
[[28,23,18],[14,27,11],[17,12,25]]
---- correct output:
0
---- user output:
0
-- TEST CASE 2:
---- input:
[[21,29,21],[26,24,23],[29,28,23],[22,28,22],[27,10,10],[29,24,20]]
---- correct output:
2
---- user output:
0
-- TEST CASE 3:
---- input:
[[10,22,14],[25,12,21],[23,22,18],[22,10,21],[20,10,15]]
---- correct output:
2
---- user output:
1
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 15:41:17) 
-- CODE:
from numpy import*
mat = array(eval(input("Insira a matriz: ")))

z = mat[0,0]
v = 0
for i in range(shape(mat)[0]):
	for j in range(shape(mat)[1]):
		if z < mat[i,j]: 
			v = i
			z = mat[i,j]
		
print(v)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 15:41:17) 
-- CODE:
from numpy import*
mat = array(eval(input("Insira a matriz: ")))

z = mat[0,0]
v = 0
for i in range(shape(mat)[0]):
	for j in range(shape(mat)[1]):
		if z < mat[i,j]: 
			v = i
			z = mat[i,j]
		
print(v)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 15:41:17) 
-- CODE:
from numpy import*
mat = array(eval(input("Insira a matriz: ")))

z = mat[0,0]
v = 0
for i in range(shape(mat)[0]):
	for j in range(shape(mat)[1]):
		if z < mat[i,j]: 
			v = i
			z = mat[i,j]
		
print(v)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 15:41:17) 
-- CODE:
from numpy import*
mat = array(eval(input("Insira a matriz: ")))

z = mat[0,0]
v = 0
for i in range(shape(mat)[0]):
	for j in range(shape(mat)[1]):
		if z < mat[i,j]: 
			v = i
			z = mat[i,j]
		
print(v)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 15:41:17) 
-- CODE:
from numpy import*
mat = array(eval(input("Insira a matriz: ")))

z = mat[0,0]
v = 0
for i in range(shape(mat)[0]):
	for j in range(shape(mat)[1]):
		if z < mat[i,j]: 
			v = i
			z = mat[i,j]
		
print(v)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-03 15:41:18) 
-- CODE:
from numpy import*
mat = array(eval(input("Insira a matriz: ")))

z = mat[0,0]
v = 0
for i in range(shape(mat)[0]):
	for j in range(shape(mat)[1]):
		if z < mat[i,j]: 
			v = i
			z = mat[i,j]
		
print(v)

-- EXECUTION TIME:
4.51494
-- TEST CASE 1:
---- input:
[[28,23,18],[14,27,11],[17,12,25]]
---- correct output:
0
---- user output:
0
-- TEST CASE 2:
---- input:
[[21,29,21],[26,24,23],[29,28,23],[22,28,22],[27,10,10],[29,24,20]]
---- correct output:
2
---- user output:
0
-- TEST CASE 3:
---- input:
[[10,22,14],[25,12,21],[23,22,18],[22,10,21],[20,10,15]]
---- correct output:
2
---- user output:
1
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-03 15:41:19) 
-- CODE:
from numpy import*
mat = array(eval(input("Insira a matriz: ")))

z = mat[0,0]
v = 0
for i in range(shape(mat)[0]):
	for j in range(shape(mat)[1]):
		if z < mat[i,j]: 
			v = i
			z = mat[i,j]
		
print(v)

-- EXECUTION TIME:
7.03723
-- TEST CASE 1:
---- input:
[[28,23,18],[14,27,11],[17,12,25]]
---- correct output:
0
---- user output:
0
-- TEST CASE 2:
---- input:
[[21,29,21],[26,24,23],[29,28,23],[22,28,22],[27,10,10],[29,24,20]]
---- correct output:
2
---- user output:
0
-- TEST CASE 3:
---- input:
[[10,22,14],[25,12,21],[23,22,18],[22,10,21],[20,10,15]]
---- correct output:
2
---- user output:
1
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-03 15:41:20) 
-- CODE:
from numpy import*
mat = array(eval(input("Insira a matriz: ")))

z = mat[0,0]
v = 0
for i in range(shape(mat)[0]):
	for j in range(shape(mat)[1]):
		if z < mat[i,j]: 
			v = i
			z = mat[i,j]
		
print(v)

-- EXECUTION TIME:
9.09776
-- TEST CASE 1:
---- input:
[[28,23,18],[14,27,11],[17,12,25]]
---- correct output:
0
---- user output:
0
-- TEST CASE 2:
---- input:
[[21,29,21],[26,24,23],[29,28,23],[22,28,22],[27,10,10],[29,24,20]]
---- correct output:
2
---- user output:
0
-- TEST CASE 3:
---- input:
[[10,22,14],[25,12,21],[23,22,18],[22,10,21],[20,10,15]]
---- correct output:
2
---- user output:
1
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-03 15:41:21) 
-- CODE:
from numpy import*
mat = array(eval(input("Insira a matriz: ")))

z = mat[0,0]
v = 0
for i in range(shape(mat)[0]):
	for j in range(shape(mat)[1]):
		if z < mat[i,j]: 
			v = i
			z = mat[i,j]
		
print(v)

-- EXECUTION TIME:
8.89621
-- TEST CASE 1:
---- input:
[[28,23,18],[14,27,11],[17,12,25]]
---- correct output:
0
---- user output:
0
-- TEST CASE 2:
---- input:
[[21,29,21],[26,24,23],[29,28,23],[22,28,22],[27,10,10],[29,24,20]]
---- correct output:
2
---- user output:
1
-- TEST CASE 3:
---- input:
[[10,22,14],[25,12,21],[23,22,18],[22,10,21],[20,10,15]]
---- correct output:
2
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-03 15:41:22) 
-- CODE:
from numpy import*
mat = array(eval(input("Insira a matriz: ")))

z = mat[0,0]
v = 0
for i in range(shape(mat)[0]):
	for j in range(shape(mat)[1]):
		if z < mat[i,j]: 
			v = i
			z = mat[i,j]
		
print(v)

-- EXECUTION TIME:
8.74321
-- TEST CASE 1:
---- input:
[[28,23,18],[14,27,11],[17,12,25]]
---- correct output:
0
---- user output:
0
-- TEST CASE 2:
---- input:
[[21,29,21],[26,24,23],[29,28,23],[22,28,22],[27,10,10],[29,24,20]]
---- correct output:
2
---- user output:
1
-- TEST CASE 3:
---- input:
[[10,22,14],[25,12,21],[23,22,18],[22,10,21],[20,10,15]]
---- correct output:
2
---- user output:
0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-03 15:41:39) 
-- CODE:
from numpy import*
mat = array(eval(input("Insira a matriz: ")))

z = mat[0,0]
v = 0
for i in range(shape(mat)[0]):
	for j in range(shape(mat)[1]):
		if z < mat[i,j]: 
			v = i
			z = mat[i,j]
		
print(v)

-- EXECUTION TIME:
6.30397
-- TEST CASE 1:
---- input:
[[28,23,18],[14,27,11],[17,12,25]]
---- correct output:
0
---- user output:
0
-- TEST CASE 2:
---- input:
[[21,29,21],[26,24,23],[29,28,23],[22,28,22],[27,10,10],[29,24,20]]
---- correct output:
2
---- user output:
0
-- TEST CASE 3:
---- input:
[[10,22,14],[25,12,21],[23,22,18],[22,10,21],[20,10,15]]
---- correct output:
2
---- user output:
1
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-03 15:41:40) 
-- CODE:
from numpy import*
mat = array(eval(input("Insira a matriz: ")))

z = mat[0,0]
v = 0
for i in range(shape(mat)[0]):
	for j in range(shape(mat)[1]):
		if z < mat[i,j]: 
			v = i
			z = mat[i,j]
		
print(v)

-- EXECUTION TIME:
7.1425
-- TEST CASE 1:
---- input:
[[28,23,18],[14,27,11],[17,12,25]]
---- correct output:
0
---- user output:
0
-- TEST CASE 2:
---- input:
[[21,29,21],[26,24,23],[29,28,23],[22,28,22],[27,10,10],[29,24,20]]
---- correct output:
2
---- user output:
0
-- TEST CASE 3:
---- input:
[[10,22,14],[25,12,21],[23,22,18],[22,10,21],[20,10,15]]
---- correct output:
2
---- user output:
1
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-03 15:41:41) 
-- CODE:
from numpy import*
mat = array(eval(input("Insira a matriz: ")))

z = mat[0,0]
v = 0
for i in range(shape(mat)[0]):
	for j in range(shape(mat)[1]):
		if z < mat[i,j]: 
			v = i
			z = mat[i,j]
		
print(v)

-- EXECUTION TIME:
6.92287
-- TEST CASE 1:
---- input:
[[28,23,18],[14,27,11],[17,12,25]]
---- correct output:
0
---- user output:
0
-- TEST CASE 2:
---- input:
[[21,29,21],[26,24,23],[29,28,23],[22,28,22],[27,10,10],[29,24,20]]
---- correct output:
2
---- user output:
0
-- TEST CASE 3:
---- input:
[[10,22,14],[25,12,21],[23,22,18],[22,10,21],[20,10,15]]
---- correct output:
2
---- user output:
1
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-03 15:41:42) 
-- CODE:
from numpy import*
mat = array(eval(input("Insira a matriz: ")))

z = mat[0,0]
v = 0
for i in range(shape(mat)[0]):
	for j in range(shape(mat)[1]):
		if z < mat[i,j]: 
			v = i
			z = mat[i,j]
		
print(v)

-- EXECUTION TIME:
7.19989
-- TEST CASE 1:
---- input:
[[28,23,18],[14,27,11],[17,12,25]]
---- correct output:
0
---- user output:
0
-- TEST CASE 2:
---- input:
[[21,29,21],[26,24,23],[29,28,23],[22,28,22],[27,10,10],[29,24,20]]
---- correct output:
2
---- user output:
0
-- TEST CASE 3:
---- input:
[[10,22,14],[25,12,21],[23,22,18],[22,10,21],[20,10,15]]
---- correct output:
2
---- user output:
1
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-03 15:41:43) 
-- CODE:
from numpy import*
mat = array(eval(input("Insira a matriz: ")))

z = mat[0,0]
v = 0
for i in range(shape(mat)[0]):
	for j in range(shape(mat)[1]):
		if z < mat[i,j]: 
			v = i
			z = mat[i,j]
		
print(v)

-- EXECUTION TIME:
7.18975
-- TEST CASE 1:
---- input:
[[28,23,18],[14,27,11],[17,12,25]]
---- correct output:
0
---- user output:
0
-- TEST CASE 2:
---- input:
[[21,29,21],[26,24,23],[29,28,23],[22,28,22],[27,10,10],[29,24,20]]
---- correct output:
2
---- user output:
1
-- TEST CASE 3:
---- input:
[[10,22,14],[25,12,21],[23,22,18],[22,10,21],[20,10,15]]
---- correct output:
2
---- user output:
1
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-03 15:41:44) 
-- CODE:
from numpy import*
mat = array(eval(input("Insira a matriz: ")))

z = mat[0,0]
v = 0
for i in range(shape(mat)[0]):
	for j in range(shape(mat)[1]):
		if z < mat[i,j]: 
			v = i
			z = mat[i,j]
		
print(v)

-- EXECUTION TIME:
7.30169
-- TEST CASE 1:
---- input:
[[28,23,18],[14,27,11],[17,12,25]]
---- correct output:
0
---- user output:
0
-- TEST CASE 2:
---- input:
[[21,29,21],[26,24,23],[29,28,23],[22,28,22],[27,10,10],[29,24,20]]
---- correct output:
2
---- user output:
1
-- TEST CASE 3:
---- input:
[[10,22,14],[25,12,21],[23,22,18],[22,10,21],[20,10,15]]
---- correct output:
2
---- user output:
0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-03 15:41:59) 
-- CODE:
from numpy import*
mat = array(eval(input("Insira a matriz: ")))

z = mat[0,0]
v = 0
for i in range(shape(mat)[0]):
	for j in range(shape(mat)[1]):
		if z < mat[i,j]: 
			v = i
			z = mat[i,j]
		
print(v)

-- EXECUTION TIME:
6.82454
-- TEST CASE 1:
---- input:
[[28,23,18],[14,27,11],[17,12,25]]
---- correct output:
0
---- user output:
0
-- TEST CASE 2:
---- input:
[[21,29,21],[26,24,23],[29,28,23],[22,28,22],[27,10,10],[29,24,20]]
---- correct output:
2
---- user output:
0
-- TEST CASE 3:
---- input:
[[10,22,14],[25,12,21],[23,22,18],[22,10,21],[20,10,15]]
---- correct output:
2
---- user output:
1
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-03 15:42:00) 
-- CODE:
from numpy import*
mat = array(eval(input("Insira a matriz: ")))

z = mat[0,0]
v = 0
for i in range(shape(mat)[0]):
	for j in range(shape(mat)[1]):
		if z < mat[i,j]: 
			v = i
			z = mat[i,j]
		
print(v)

-- EXECUTION TIME:
6.80801
-- TEST CASE 1:
---- input:
[[28,23,18],[14,27,11],[17,12,25]]
---- correct output:
0
---- user output:
0
-- TEST CASE 2:
---- input:
[[21,29,21],[26,24,23],[29,28,23],[22,28,22],[27,10,10],[29,24,20]]
---- correct output:
2
---- user output:
0
-- TEST CASE 3:
---- input:
[[10,22,14],[25,12,21],[23,22,18],[22,10,21],[20,10,15]]
---- correct output:
2
---- user output:
1
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-03 15:42:00) 
-- CODE:
from numpy import*
mat = array(eval(input("Insira a matriz: ")))

z = mat[0,0]
v = 0
for i in range(shape(mat)[0]):
	for j in range(shape(mat)[1]):
		if z < mat[i,j]: 
			v = i
			z = mat[i,j]
		
print(v)

-- EXECUTION TIME:
6.53193
-- TEST CASE 1:
---- input:
[[28,23,18],[14,27,11],[17,12,25]]
---- correct output:
0
---- user output:
0
-- TEST CASE 2:
---- input:
[[21,29,21],[26,24,23],[29,28,23],[22,28,22],[27,10,10],[29,24,20]]
---- correct output:
2
---- user output:
0
-- TEST CASE 3:
---- input:
[[10,22,14],[25,12,21],[23,22,18],[22,10,21],[20,10,15]]
---- correct output:
2
---- user output:
1
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-03 15:42:00) 
-- CODE:
from numpy import*
mat = array(eval(input("Insira a matriz: ")))

z = mat[0,0]
v = 0
for i in range(shape(mat)[0]):
	for j in range(shape(mat)[1]):
		if z < mat[i,j]: 
			v = i
			z = mat[i,j]
		
print(v)

-- EXECUTION TIME:
6.43853
-- TEST CASE 1:
---- input:
[[28,23,18],[14,27,11],[17,12,25]]
---- correct output:
0
---- user output:
0
-- TEST CASE 2:
---- input:
[[21,29,21],[26,24,23],[29,28,23],[22,28,22],[27,10,10],[29,24,20]]
---- correct output:
2
---- user output:
0
-- TEST CASE 3:
---- input:
[[10,22,14],[25,12,21],[23,22,18],[22,10,21],[20,10,15]]
---- correct output:
2
---- user output:
1
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-03 15:42:00) 
-- CODE:
from numpy import*
mat = array(eval(input("Insira a matriz: ")))

z = mat[0,0]
v = 0
for i in range(shape(mat)[0]):
	for j in range(shape(mat)[1]):
		if z < mat[i,j]: 
			v = i
			z = mat[i,j]
		
print(v)

-- EXECUTION TIME:
6.51971
-- TEST CASE 1:
---- input:
[[28,23,18],[14,27,11],[17,12,25]]
---- correct output:
0
---- user output:
0
-- TEST CASE 2:
---- input:
[[21,29,21],[26,24,23],[29,28,23],[22,28,22],[27,10,10],[29,24,20]]
---- correct output:
2
---- user output:
0
-- TEST CASE 3:
---- input:
[[10,22,14],[25,12,21],[23,22,18],[22,10,21],[20,10,15]]
---- correct output:
2
---- user output:
1
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-03 15:42:00) 
-- CODE:
from numpy import*
mat = array(eval(input("Insira a matriz: ")))

z = mat[0,0]
v = 0
for i in range(shape(mat)[0]):
	for j in range(shape(mat)[1]):
		if z < mat[i,j]: 
			v = i
			z = mat[i,j]
		
print(v)

-- EXECUTION TIME:
6.53337
-- TEST CASE 1:
---- input:
[[28,23,18],[14,27,11],[17,12,25]]
---- correct output:
0
---- user output:
0
-- TEST CASE 2:
---- input:
[[21,29,21],[26,24,23],[29,28,23],[22,28,22],[27,10,10],[29,24,20]]
---- correct output:
2
---- user output:
1
-- TEST CASE 3:
---- input:
[[10,22,14],[25,12,21],[23,22,18],[22,10,21],[20,10,15]]
---- correct output:
2
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 15:42:04) 
-- CODE:
from numpy import*
mat = array(eval(input("Insira a matriz: ")))

z = mat[0,0]
v = 0
for i in range(shape(mat)[0]):
	for j in range(shape(mat)[1]):
		if z < mat[i,j]: 
			v = i
			z = mat[i,j]
		
print(v)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 15:42:10) 
-- CODE:
from numpy import*
mat = array(eval(input("Insira a matriz: ")))

z = mat[0,0]
v = 0
for i in range(shape(mat)[0]):
	for j in range(shape(mat)[1]):
		if z < mat[i,j]: 
			v = i
			z = mat[i,j]
		
print(v)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 15:42:54) 
-- CODE:
from numpy import*
mat = array(eval(input("Insira a matriz: ")))

z = mat[0,0]
v = 0
for i in range(shape(mat)[0]):
	for j in range(shape(mat)[1]):
		if z < mat[i,j]: 
			v = i
			z = mat[i,j]
		
print(v)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-03 15:43:19) 
-- CODE:
from numpy import*
mat = array(eval(input("Insira a matriz: ")))

z = mat[0,0]
v = 0
for i in range(shape(mat)[0]):
	for j in range(shape(mat)[1]):
		if z < mat[i,j]: 
			v = i
			z = mat[i,j]
		
print(v)

-- EXECUTION TIME:
1.2859
-- TEST CASE 1:
---- input:
[[28,23,18],[14,27,11],[17,12,25]]
---- correct output:
0
---- user output:
0
-- TEST CASE 2:
---- input:
[[21,29,21],[26,24,23],[29,28,23],[22,28,22],[27,10,10],[29,24,20]]
---- correct output:
2
---- user output:
0
-- TEST CASE 3:
---- input:
[[10,22,14],[25,12,21],[23,22,18],[22,10,21],[20,10,15]]
---- correct output:
2
---- user output:
1
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 15:43:50) 
-- CODE:
from numpy import*
mat = array(eval(input("Insira a matriz: ")))

z = mat[0,0]
v = 0
for i in range(shape(mat)[0]):
	for j in range(shape(mat)[1]):
		if z < mat[i,j]: 
			v = i
			z = mat[i,j]
		
print(v)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-03 15:44:08) 
-- CODE:
from numpy import*
mat = array(eval(input("Insira a matriz: ")))

z = mat[0,0]
v = 0
for i in range(shape(mat)[0]):
	for j in range(shape(mat)[1]):
		if z < mat[i,j]: 
			v = i
			z = mat[i,j]
		
print(v)

-- EXECUTION TIME:
1.78705
-- TEST CASE 1:
---- input:
[[28,23,18],[14,27,11],[17,12,25]]
---- correct output:
0
---- user output:
0
-- TEST CASE 2:
---- input:
[[21,29,21],[26,24,23],[29,28,23],[22,28,22],[27,10,10],[29,24,20]]
---- correct output:
2
---- user output:
0
-- TEST CASE 3:
---- input:
[[10,22,14],[25,12,21],[23,22,18],[22,10,21],[20,10,15]]
---- correct output:
2
---- user output:
1
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 15:44:08) 
-- CODE:
from numpy import*
mat = array(eval(input("Insira a matriz: ")))

z = mat[0,0]
v = 0
for i in range(shape(mat)[0]):
	for j in range(shape(mat)[1]):
		if z < mat[i,j]: 
			v = i
			z = mat[i,j]
		
print(v)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-03 15:44:09) 
-- CODE:
from numpy import*
mat = array(eval(input("Insira a matriz: ")))

z = mat[0,0]
v = 0
for i in range(shape(mat)[0]):
	for j in range(shape(mat)[1]):
		if z < mat[i,j]: 
			v = i
			z = mat[i,j]
		
print(v)

-- EXECUTION TIME:
4.32228
-- TEST CASE 1:
---- input:
[[28,23,18],[14,27,11],[17,12,25]]
---- correct output:
0
---- user output:
0
-- TEST CASE 2:
---- input:
[[21,29,21],[26,24,23],[29,28,23],[22,28,22],[27,10,10],[29,24,20]]
---- correct output:
2
---- user output:
0
-- TEST CASE 3:
---- input:
[[10,22,14],[25,12,21],[23,22,18],[22,10,21],[20,10,15]]
---- correct output:
2
---- user output:
1
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-03 15:44:10) 
-- CODE:
from numpy import*
mat = array(eval(input("Insira a matriz: ")))

z = mat[0,0]
v = 0
for i in range(shape(mat)[0]):
	for j in range(shape(mat)[1]):
		if z < mat[i,j]: 
			v = i
			z = mat[i,j]
		
print(v)

-- EXECUTION TIME:
5.18274
-- TEST CASE 1:
---- input:
[[28,23,18],[14,27,11],[17,12,25]]
---- correct output:
0
---- user output:
0
-- TEST CASE 2:
---- input:
[[21,29,21],[26,24,23],[29,28,23],[22,28,22],[27,10,10],[29,24,20]]
---- correct output:
2
---- user output:
0
-- TEST CASE 3:
---- input:
[[10,22,14],[25,12,21],[23,22,18],[22,10,21],[20,10,15]]
---- correct output:
2
---- user output:
0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-03 15:44:12) 
-- CODE:
from numpy import*
mat = array(eval(input("Insira a matriz: ")))

z = mat[0,0]
v = 0
for i in range(shape(mat)[0]):
	for j in range(shape(mat)[1]):
		if z < mat[i,j]: 
			v = i
			z = mat[i,j]
		
print(v)

-- EXECUTION TIME:
6.76802
-- TEST CASE 1:
---- input:
[[28,23,18],[14,27,11],[17,12,25]]
---- correct output:
0
---- user output:
0
-- TEST CASE 2:
---- input:
[[21,29,21],[26,24,23],[29,28,23],[22,28,22],[27,10,10],[29,24,20]]
---- correct output:
2
---- user output:
0
-- TEST CASE 3:
---- input:
[[10,22,14],[25,12,21],[23,22,18],[22,10,21],[20,10,15]]
---- correct output:
2
---- user output:
1
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-03 15:44:14) 
-- CODE:
from numpy import*
mat = array(eval(input("Insira a matriz: ")))

z = mat[0,0]
v = 0
for i in range(shape(mat)[0]):
	for j in range(shape(mat)[1]):
		if z < mat[i,j]: 
			v = i
			z = mat[i,j]
		
print(v)

-- EXECUTION TIME:
7.74382
-- TEST CASE 1:
---- input:
[[28,23,18],[14,27,11],[17,12,25]]
---- correct output:
0
---- user output:
0
-- TEST CASE 2:
---- input:
[[21,29,21],[26,24,23],[29,28,23],[22,28,22],[27,10,10],[29,24,20]]
---- correct output:
2
---- user output:
1
-- TEST CASE 3:
---- input:
[[10,22,14],[25,12,21],[23,22,18],[22,10,21],[20,10,15]]
---- correct output:
2
---- user output:
0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-03 15:44:18) 
-- CODE:
from numpy import*
mat = array(eval(input("Insira a matriz: ")))

z = mat[0,0]
v = 0
for i in range(shape(mat)[0]):
	for j in range(shape(mat)[1]):
		if z < mat[i,j]: 
			v = i
			z = mat[i,j]
		
print(v)

-- EXECUTION TIME:
7.73469
-- TEST CASE 1:
---- input:
[[28,23,18],[14,27,11],[17,12,25]]
---- correct output:
0
---- user output:
0
-- TEST CASE 2:
---- input:
[[21,29,21],[26,24,23],[29,28,23],[22,28,22],[27,10,10],[29,24,20]]
---- correct output:
2
---- user output:
1
-- TEST CASE 3:
---- input:
[[10,22,14],[25,12,21],[23,22,18],[22,10,21],[20,10,15]]
---- correct output:
2
---- user output:
0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 15:44:18) 
-- CODE:
from numpy import*
mat = array(eval(input("Insira a matriz: ")))

z = mat[0,0]
v = 0
for i in range(shape(mat)[0]):
	for j in range(shape(mat)[1]):
		if z < mat[i,j]: 
			v = i
			z = mat[i,j]
		
print(v)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 15:44:18) 
-- CODE:
from numpy import*
mat = array(eval(input("Insira a matriz: ")))

z = mat[0,0]
v = 0
for i in range(shape(mat)[0]):
	for j in range(shape(mat)[1]):
		if z < mat[i,j]: 
			v = i
			z = mat[i,j]
		
print(v)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 15:44:18) 
-- CODE:
from numpy import*
mat = array(eval(input("Insira a matriz: ")))

z = mat[0,0]
v = 0
for i in range(shape(mat)[0]):
	for j in range(shape(mat)[1]):
		if z < mat[i,j]: 
			v = i
			z = mat[i,j]
		
print(v)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 15:44:18) 
-- CODE:
from numpy import*
mat = array(eval(input("Insira a matriz: ")))

z = mat[0,0]
v = 0
for i in range(shape(mat)[0]):
	for j in range(shape(mat)[1]):
		if z < mat[i,j]: 
			v = i
			z = mat[i,j]
		
print(v)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 15:44:18) 
-- CODE:
from numpy import*
mat = array(eval(input("Insira a matriz: ")))

z = mat[0,0]
v = 0
for i in range(shape(mat)[0]):
	for j in range(shape(mat)[1]):
		if z < mat[i,j]: 
			v = i
			z = mat[i,j]
		
print(v)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 15:44:18) 
-- CODE:
from numpy import*
mat = array(eval(input("Insira a matriz: ")))

z = mat[0,0]
v = 0
for i in range(shape(mat)[0]):
	for j in range(shape(mat)[1]):
		if z < mat[i,j]: 
			v = i
			z = mat[i,j]
		
print(v)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 15:44:18) 
-- CODE:
from numpy import*
mat = array(eval(input("Insira a matriz: ")))

z = mat[0,0]
v = 0
for i in range(shape(mat)[0]):
	for j in range(shape(mat)[1]):
		if z < mat[i,j]: 
			v = i
			z = mat[i,j]
		
print(v)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 15:44:18) 
-- CODE:
from numpy import*
mat = array(eval(input("Insira a matriz: ")))

z = mat[0,0]
v = 0
for i in range(shape(mat)[0]):
	for j in range(shape(mat)[1]):
		if z < mat[i,j]: 
			v = i
			z = mat[i,j]
		
print(v)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 15:44:18) 
-- CODE:
from numpy import*
mat = array(eval(input("Insira a matriz: ")))

z = mat[0,0]
v = 0
for i in range(shape(mat)[0]):
	for j in range(shape(mat)[1]):
		if z < mat[i,j]: 
			v = i
			z = mat[i,j]
		
print(v)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 15:44:18) 
-- CODE:
from numpy import*
mat = array(eval(input("Insira a matriz: ")))

z = mat[0,0]
v = 0
for i in range(shape(mat)[0]):
	for j in range(shape(mat)[1]):
		if z < mat[i,j]: 
			v = i
			z = mat[i,j]
		
print(v)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 15:44:18) 
-- CODE:
from numpy import*
mat = array(eval(input("Insira a matriz: ")))

z = mat[0,0]
v = 0
for i in range(shape(mat)[0]):
	for j in range(shape(mat)[1]):
		if z < mat[i,j]: 
			v = i
			z = mat[i,j]
		
print(v)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 15:44:18) 
-- CODE:
from numpy import*
mat = array(eval(input("Insira a matriz: ")))

z = mat[0,0]
v = 0
for i in range(shape(mat)[0]):
	for j in range(shape(mat)[1]):
		if z < mat[i,j]: 
			v = i
			z = mat[i,j]
		
print(v)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 15:44:18) 
-- CODE:
from numpy import*
mat = array(eval(input("Insira a matriz: ")))

z = mat[0,0]
v = 0
for i in range(shape(mat)[0]):
	for j in range(shape(mat)[1]):
		if z < mat[i,j]: 
			v = i
			z = mat[i,j]
		
print(v)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 15:44:26) 
-- CODE:
from numpy import*
mat = array(eval(input("Insira a matriz: ")))

z = mat[0,0]
v = 0
for i in range(shape(mat)[0]):
	for j in range(shape(mat)[1]):
		if z < mat[i,j]: 
			v = i
			z = mat[i,j]
		
print(v)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-03 15:44:29) 
-- CODE:
from numpy import*
mat = array(eval(input("Insira a matriz: ")))

z = mat[0,0]
v = 0
for i in range(shape(mat)[0]):
	for j in range(shape(mat)[1]):
		if z < mat[i,j]: 
			v = i
			z = mat[i,j]
		
print(v)

-- EXECUTION TIME:
6.91237
-- TEST CASE 1:
---- input:
[[28,23,18],[14,27,11],[17,12,25]]
---- correct output:
0
---- user output:
0
-- TEST CASE 2:
---- input:
[[21,29,21],[26,24,23],[29,28,23],[22,28,22],[27,10,10],[29,24,20]]
---- correct output:
2
---- user output:
0
-- TEST CASE 3:
---- input:
[[10,22,14],[25,12,21],[23,22,18],[22,10,21],[20,10,15]]
---- correct output:
2
---- user output:
1
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-03 15:44:30) 
-- CODE:
from numpy import*
mat = array(eval(input("Insira a matriz: ")))

z = mat[0,0]
v = 0
for i in range(shape(mat)[0]):
	for j in range(shape(mat)[1]):
		if z < mat[i,j]: 
			v = i
			z = mat[i,j]
		
print(v)

-- EXECUTION TIME:
6.33657
-- TEST CASE 1:
---- input:
[[28,23,18],[14,27,11],[17,12,25]]
---- correct output:
0
---- user output:
0
-- TEST CASE 2:
---- input:
[[21,29,21],[26,24,23],[29,28,23],[22,28,22],[27,10,10],[29,24,20]]
---- correct output:
2
---- user output:
0
-- TEST CASE 3:
---- input:
[[10,22,14],[25,12,21],[23,22,18],[22,10,21],[20,10,15]]
---- correct output:
2
---- user output:
1
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-03 15:44:30) 
-- CODE:
from numpy import*
mat = array(eval(input("Insira a matriz: ")))

z = mat[0,0]
v = 0
for i in range(shape(mat)[0]):
	for j in range(shape(mat)[1]):
		if z < mat[i,j]: 
			v = i
			z = mat[i,j]
		
print(v)

-- EXECUTION TIME:
6.34237
-- TEST CASE 1:
---- input:
[[28,23,18],[14,27,11],[17,12,25]]
---- correct output:
0
---- user output:
1
-- TEST CASE 2:
---- input:
[[21,29,21],[26,24,23],[29,28,23],[22,28,22],[27,10,10],[29,24,20]]
---- correct output:
2
---- user output:
0
-- TEST CASE 3:
---- input:
[[10,22,14],[25,12,21],[23,22,18],[22,10,21],[20,10,15]]
---- correct output:
2
---- user output:
Insira a matriz: 0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-03 15:44:30) 
-- CODE:
from numpy import*
mat = array(eval(input("Insira a matriz: ")))

z = mat[0,0]
v = 0
for i in range(shape(mat)[0]):
	for j in range(shape(mat)[1]):
		if z < mat[i,j]: 
			v = i
			z = mat[i,j]
		
print(v)

-- EXECUTION TIME:
6.79831
-- TEST CASE 1:
---- input:
[[28,23,18],[14,27,11],[17,12,25]]
---- correct output:
0
---- user output:
0
-- TEST CASE 2:
---- input:
[[21,29,21],[26,24,23],[29,28,23],[22,28,22],[27,10,10],[29,24,20]]
---- correct output:
2
---- user output:
0
-- TEST CASE 3:
---- input:
[[10,22,14],[25,12,21],[23,22,18],[22,10,21],[20,10,15]]
---- correct output:
2
---- user output:
Insira a matriz: 1
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-03 15:44:30) 
-- CODE:
from numpy import*
mat = array(eval(input("Insira a matriz: ")))

z = mat[0,0]
v = 0
for i in range(shape(mat)[0]):
	for j in range(shape(mat)[1]):
		if z < mat[i,j]: 
			v = i
			z = mat[i,j]
		
print(v)

-- EXECUTION TIME:
6.90244
-- TEST CASE 1:
---- input:
[[28,23,18],[14,27,11],[17,12,25]]
---- correct output:
0
---- user output:
0
-- TEST CASE 2:
---- input:
[[21,29,21],[26,24,23],[29,28,23],[22,28,22],[27,10,10],[29,24,20]]
---- correct output:
2
---- user output:
1
-- TEST CASE 3:
---- input:
[[10,22,14],[25,12,21],[23,22,18],[22,10,21],[20,10,15]]
---- correct output:
2
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-03 15:44:31) 
-- CODE:
from numpy import*
mat = array(eval(input("Insira a matriz: ")))

z = mat[0,0]
v = 0
for i in range(shape(mat)[0]):
	for j in range(shape(mat)[1]):
		if z < mat[i,j]: 
			v = i
			z = mat[i,j]
		
print(v)

-- EXECUTION TIME:
6.79676
-- TEST CASE 1:
---- input:
[[28,23,18],[14,27,11],[17,12,25]]
---- correct output:
0
---- user output:
0
-- TEST CASE 2:
---- input:
[[21,29,21],[26,24,23],[29,28,23],[22,28,22],[27,10,10],[29,24,20]]
---- correct output:
2
---- user output:
Insira a matriz: 1
-- TEST CASE 3:
---- input:
[[10,22,14],[25,12,21],[23,22,18],[22,10,21],[20,10,15]]
---- correct output:
2
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-03 15:44:44) 
-- CODE:
from numpy import*
mat = array(eval(input("Insira a matriz: ")))

z = mat[0,0]
v = 0
for i in range(shape(mat)[0]):
	for j in range(shape(mat)[1]):
		if z < mat[i,j]: 
			v = i
			z = mat[i,j]
		
print(v)

-- EXECUTION TIME:
0.973981
-- TEST CASE 1:
---- input:
[[28,23,18],[14,27,11],[17,12,25]]
---- correct output:
0
---- user output:
0
-- TEST CASE 2:
---- input:
[[21,29,21],[26,24,23],[29,28,23],[22,28,22],[27,10,10],[29,24,20]]
---- correct output:
2
---- user output:
0
-- TEST CASE 3:
---- input:
[[10,22,14],[25,12,21],[23,22,18],[22,10,21],[20,10,15]]
---- correct output:
2
---- user output:
1
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 15:44:48) 
-- CODE:
from numpy import*
mat = array(eval(input("Insira a matriz: ")))

z = mat[0,0]
v = 0
for i in range(shape(mat)[0]):
	for j in range(shape(mat)[1]):
		if z < mat[i,j]: 
			v = i
			z = mat[i,j]
		
print(v)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 15:44:59) 
-- CODE:
from numpy import*
mat = array(eval(input("Insira a matriz: ")))

z = mat[0,0]
v = 0
for i in range(shape(mat)[0]):
	for j in range(shape(mat)[1]):
		if z < mat[i,j]: 
			v = i
			z = mat[i,j]
		
print(v)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-03 15:46:16) 
-- CODE:
from numpy import*
mat = array(eval(input("Insira a matriz: ")))

z = mat[0,0]
v = 0
for i in range(shape(mat)[0]):
	for j in range(shape(mat)[1]):
		if z < mat[i,j]: 
			v = i
			z = mat[i,j]
		
print(v)

-- EXECUTION TIME:
1.8748
-- TEST CASE 1:
---- input:
[[28,23,18],[14,27,11],[17,12,25]]
---- correct output:
0
---- user output:
0
-- TEST CASE 2:
---- input:
[[21,29,21],[26,24,23],[29,28,23],[22,28,22],[27,10,10],[29,24,20]]
---- correct output:
2
---- user output:
0
-- TEST CASE 3:
---- input:
[[10,22,14],[25,12,21],[23,22,18],[22,10,21],[20,10,15]]
---- correct output:
2
---- user output:
1
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-03 15:46:17) 
-- CODE:
from numpy import*
mat = array(eval(input("Insira a matriz: ")))

z = mat[0,0]
v = 0
for i in range(shape(mat)[0]):
	for j in range(shape(mat)[1]):
		if z < mat[i,j]: 
			v = i
			z = mat[i,j]
		
print(v)

-- EXECUTION TIME:
2.16877
-- TEST CASE 1:
---- input:
[[28,23,18],[14,27,11],[17,12,25]]
---- correct output:
0
---- user output:
0
-- TEST CASE 2:
---- input:
[[21,29,21],[26,24,23],[29,28,23],[22,28,22],[27,10,10],[29,24,20]]
---- correct output:
2
---- user output:
0
-- TEST CASE 3:
---- input:
[[10,22,14],[25,12,21],[23,22,18],[22,10,21],[20,10,15]]
---- correct output:
2
---- user output:
1
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-03 15:46:17) 
-- CODE:
from numpy import*
mat = array(eval(input("Insira a matriz: ")))

z = mat[0,0]
v = 0
for i in range(shape(mat)[0]):
	for j in range(shape(mat)[1]):
		if z < mat[i,j]: 
			v = i
			z = mat[i,j]
		
print(v)

-- EXECUTION TIME:
3.26607
-- TEST CASE 1:
---- input:
[[28,23,18],[14,27,11],[17,12,25]]
---- correct output:
0
---- user output:
0
-- TEST CASE 2:
---- input:
[[21,29,21],[26,24,23],[29,28,23],[22,28,22],[27,10,10],[29,24,20]]
---- correct output:
2
---- user output:
0
-- TEST CASE 3:
---- input:
[[10,22,14],[25,12,21],[23,22,18],[22,10,21],[20,10,15]]
---- correct output:
2
---- user output:
1
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-03 15:46:17) 
-- CODE:
from numpy import*
mat = array(eval(input("Insira a matriz: ")))

z = mat[0,0]
v = 0
for i in range(shape(mat)[0]):
	for j in range(shape(mat)[1]):
		if z < mat[i,j]: 
			v = i
			z = mat[i,j]
		
print(v)

-- EXECUTION TIME:
4.57116
-- TEST CASE 1:
---- input:
[[28,23,18],[14,27,11],[17,12,25]]
---- correct output:
0
---- user output:
0
-- TEST CASE 2:
---- input:
[[21,29,21],[26,24,23],[29,28,23],[22,28,22],[27,10,10],[29,24,20]]
---- correct output:
2
---- user output:
1
-- TEST CASE 3:
---- input:
[[10,22,14],[25,12,21],[23,22,18],[22,10,21],[20,10,15]]
---- correct output:
2
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 15:47:17) 
-- CODE:
from numpy import*
mat = array(eval(input("Insira a matriz: ")))

z = mat[0,0]
v = 0
for i in range(shape(mat)[0]):
	for j in range(shape(mat)[1]):
		if z < mat[i,j]: 
			v = i
			z = mat[i,j]
		
print(v)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-03 15:47:40) 
-- CODE:
from numpy import*
mat = array(eval(input("Insira a matriz: ")))

z = mat[0,0]
v = 0
for i in range(shape(mat)[0]):
	for j in range(shape(mat)[1]):
		if z < mat[i,j]: 
			v = i
			z = mat[i,j]
		
print(v)

-- EXECUTION TIME:
0.96087
-- TEST CASE 1:
---- input:
[[28,23,18],[14,27,11],[17,12,25]]
---- correct output:
0
---- user output:
0
-- TEST CASE 2:
---- input:
[[21,29,21],[26,24,23],[29,28,23],[22,28,22],[27,10,10],[29,24,20]]
---- correct output:
2
---- user output:
0
-- TEST CASE 3:
---- input:
[[10,22,14],[25,12,21],[23,22,18],[22,10,21],[20,10,15]]
---- correct output:
2
---- user output:
1
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
